--- a/MissedConnections-style.css
+++ b/MissedConnections-style.css
@@ -9,6 +9,63 @@ body {
     overflow-y: auto;  /* used to allow vertical scrollbar if neccessary */
 }
 
+#dialog-container {
+    display: none; /* Hide container by default */
+}
+
+/* CSS for jQuery UI dialog */
+.ui-dialog {
+    border: 1px solid #ccc; /* Set border */
+    border-radius: 5px; /* Set border radius */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Add shadow */
+    background-color: #fff; /* Set background color */
+}
+
+.ui-dialog .ui-dialog-titlebar {
+    background-color: #038e2d; /* Set title bar background color */
+    border-bottom: 1px solid #ccc; /* Add border at bottom */
+    border-radius: 5px 5px 0 0; /* Round top corners */
+    padding: 10px; /* Add padding */
+}
+
+.ui-dialog .ui-dialog-title {
+    color: #333; /* Set title text color */
+    font-size: 16px; /* Set title font size */
+    font-weight: bold; /* Set title font weight */
+}
+
+.ui-dialog .ui-dialog-titlebar-close {
+    position: absolute; /* Position close button */
+    right: -10%; /* Align close button to the right */
+    top: 10px; /* Align close button to the top */
+    background: none; /* Remove background */
+    border: none; /* Remove border */
+    font-size: 16px; /* Set close button font size */
+    cursor: pointer; /* Set cursor to pointer */
+    
+}
+
+.ui-dialog .ui-dialog-buttonpane {
+    text-align: right; /* Align buttons to the right */
+    padding: 10px; /* Add padding */
+}
+
+.ui-dialog .ui-dialog-buttonpane button {
+    margin: 0 23%; /* Add margin between buttons */
+    
+    padding: 5px 10px; /* Add padding to buttons */
+    font-size: 14px; /* Set button font size */
+    cursor: pointer; /* Set cursor to pointer */
+}
+
+.ui-dialog .ui-dialog-content {
+    text-align: center; /* Center text within dialog */
+    font-family: Helvetica, Arial, sans-serif;
+    color: red;
+    font-size: larger;
+    font-weight: bold;
+}
+
 header {
     width: 100vw; /* width is 100 percent of the viewport width */
 }
